# temporal-field-rs

./: Cargo.toml  README.md  SPECIFICATION.md  temporal-field.md
src/: config.rs  field.rs  lib.rs  observer.rs  substrate.rs  vector.rs
