[package]
name = "temporal-field"
version = "0.1.0"
edition = "2021"
description = "Temporal field substrate - ring buffer with decay for cognitive architectures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blackfall-labs/temporal-field-rs"
keywords = ["cognitive", "temporal", "field", "decay", "snn"]
categories = ["science", "simulation"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
